# PYTHON_2610_M1

./: .gitignore  NumberList.py  Pet.py  README.md  Tips.py  book.py  bubble_sort.py  bubles.py  call.py  catalog.html  compnum.py  days.py  dec.py  example.py  example2.py  example3.py  figure.py  fun.py  func_.py  func_r.py  guest.py  hw2.py  hw4dz1.py  index.html  main1.py  main2.py  models.py  mounth.py  number.py  numbers.py  numbers_2.py  object.py  pyproject.toml  quiz.py  requests.sql  requests2.sql  sequence.py  some1.xlsx  style.css  task.py  (+10 more)
Navasiolov_hw/: Navasiolov_hw4-1.py  Navasiolov_hw4.py
UROK_8/: urocki1-0.py  urocki1-2.py  uroki0-0.py
damashcka_4/: Navasiolov_hw4.py
hm_kazinets/: task6_1.py  task6_2.py
home_work10/: example10_1.py  example10_2.py
home_work12/: example12_1.py  example12_2.py  example12_3.py  example12_4.py  example12_5.py
home_work13/: example13.py
home_work14/: example14.py
home_work15/: example.py  rss.txt  test.xlsx
home_work16/: example16.py  parse_computer.json  parser.xlsx
home_work4/: calculator.py  restaurant.py
home_work5/: example5_1.py  example5_2.py  example5_3.py
home_work6/: authors.py  user_list.py
home_work7/: example7_1.py  example7_2.py  example7_2_1.py  example7_3.py  example7_4.py  example7_4_1.py
home_work8/: example8_1.py  example8_1_2.py  example8_1_3.py  example8_2.py  example8_3.py  example8_3_1.py
home_work9/: example9_1.py  example9_2.py  example9_3.py
home_work_html/: index.html  style.css
homework10/: generation_months.py  generation_words.py  generator_months.py  task1.py  (+4 more)
(+156 files in other folders)
