[tool.poetry]
name = "python-2610-m1"
version = "0.1.0"
description = ""
authors = ["Nastya Hurynovich <nastia.gurinovich96@gmail.com>"]
readme = "README.md"
packages = [{include = "python_2610_m1"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
